// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DOM shared by all inputs 1`] = `
.c0 {
  border-radius: var(--corner-radius);
  color: var(--color-black);
  display: block;
  font-family: var(--font-roboto);
  font-size: var(--size-14);
  line-height: var(--size-20);
  width: 100%;
}

.c0::-webkit-input-placeholder {
  color: var(--color-dark-grey);
}

.c0::-moz-placeholder {
  color: var(--color-dark-grey);
}

.c0:-ms-input-placeholder {
  color: var(--color-dark-grey);
}

.c0::placeholder {
  color: var(--color-dark-grey);
}

<input
  className="c0"
/>
`;

exports[`renders DOM specific to a default input 1`] = `
Diff:
- <BaseComponent />
+ <CompareComponent />

@@ -7,6 +7,8 @@
    font-size: var(--size-14);
    line-height: var(--size-20);
    width: 100%;
+   border: 1px solid var(--color-medium-grey);
+   padding: calc(var(--size-8) - 1px) var(--size-16);
  }
  
  .c0::-webkit-input-placeholder {
`;

exports[`renders DOM specific to a raised input 1`] = `
Diff:
- <BaseComponent />
+ <CompareComponent />

@@ -7,6 +7,9 @@
    font-size: var(--size-14);
    line-height: var(--size-20);
    width: 100%;
+   border: none;
+   box-shadow: var(--elevation-low);
+   padding: var(--size-8) var(--size-16);
  }
  
  .c0::-webkit-input-placeholder {
`;
